spacings correction

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body{
 
 .loginfront{
 
-  height: 22rem;
+  height: 24rem;
   width: 20rem;
   backdrop-filter: blur(5px);
   padding: 20px;
